tests/compile-fail/function_configuration_requires_unsafe.rs
struct BadConfiguration;

impl salsa::plumbing::function::Configuration for BadConfiguration {}

fn main() {}
